--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "ocpief",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Open Cordova Project in Existing Folder",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "ocpief": "./bin/ocpief"
+  },
+  
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ridomin/ocpief.git"
   },
   "author": "rido",
   "license": "ASIS"
