--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ocpief",
-  "version": "0.0.2-beta.6",
+  "version": "0.0.2-beta.9",
   "description": "Open Cordova Project in Existing Folder",
   "main": "index.js",
   "scripts": {
@@ -14,8 +14,9 @@
     "url": "git+https://github.com/ridomin/ocpief.git"
   },
   "author": "rido",
-  "license": "ASIS",
+  "license": "MIT",
   "dependencies": {
+    "applicationinsights": "^0.15.16",
     "xmldom": "^0.1.22"
   }
 }
