--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ocpief",
-  "version": "0.0.2-beta.9",
+  "version": "0.0.3-beta",
   "description": "Open Cordova Project in Existing Folder",
   "main": "index.js",
   "scripts": {
