--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
   "dependencies": {
     "applicationinsights": "^0.15.16",
     "xmldom": "^0.1.22"
+  },
+  "devDependencies": {
+    "eslint": "^3.0.1",
+    "eslint-config-standard": "^5.3.1",
+    "eslint-plugin-promise": "^1.3.2",
+    "eslint-plugin-standard": "^1.3.2"
   }
 }
